--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                     <iframe class="pdf-viewer-inline" src=""></iframe>
                 </div>
             </div>
-        </div>
+         
 
          <div class="project-item">
                 <div class="item-header">
@@ -696,15 +696,17 @@
                     <li>Conducted stress analysis of spherical and hemispherical geopolymer structures, accounting for wall thickness and lunar gravity; applied Lagrange multipliers and optimization methods to determine optimal habitat geometry</li>
                     <li>Used Taylor series expansion to analyze sensitivity of structural stress to angular deviations during 3D printing and construction; quantified allowable angular tolerances to keep stresses within safe limits for lunar base supports</li>
                 </ul>
-                <button onclick="togglePDF('pdf4', 'https://raw.githubusercontent.com/janierlani/portfolio/main/MATH%20IA')" class="item-link">View Paper</button>
-                <div id="pdf4" class="pdf-container">
+                <button onclick="togglePDF('pdf5', 'https://raw.githubusercontent.com/janierlani/portfolio/main/MATH%20IA.pdf')" class="item-link">View Paper</button>
+                <div id="pdf5" class="pdf-container">
                     <div class="pdf-header">
                         <span>Stress analysis of dome-shaped lunar bases</span>
-                        <button onclick="togglePDF('pdf4')" class="pdf-close-btn">Close</button>
+                        <button onclick="togglePDF('pdf5')" class="pdf-close-btn">Close</button>
                     </div>
                     <iframe class="pdf-viewer-inline" src=""></iframe>
                 </div>
             </div>
+        </div>
+
         </div>
         
         <div class="card">
