--- a/index.html
+++ b/index.html
@@ -617,11 +617,30 @@
                     <li>Optimized NaOH molarity in metakaolin-based geopolymer concrete for lunar habitat construction</li>
                     <li>Tested setting time and compressive strength for in-situ resource utilization (ISRU) applications</li>
                 </ul>
-                <button onclick="togglePDF('pdf1', 'https://docs.google.com/viewer?url=https://raw.githubusercontent.com/janierlani/portfolio/main/Geopolymers%20research%20(1).pdf&embedded=true')" class="item-link">View Paper</button>
+                <button onclick="togglePDF('pdf1', 'https://raw.githubusercontent.com/janierlani/portfolio/main/Geopolymers%20research%20(1).pdf')" class="item-link">View Paper</button>
                 <div id="pdf1" class="pdf-container">
                     <div class="pdf-header">
                         <span>Lunar Regolith-Based Geopolymer Concrete</span>
                         <button onclick="togglePDF('pdf1')" class="pdf-close-btn">Close</button>
+                    </div>
+                    <iframe class="pdf-viewer-inline" src=""></iframe>
+                </div>
+            </div>
+
+            <div class="project-item">
+                <div class="item-header">
+                    <div class="item-title">Dimension optimisation and stress analysis of dome-shaped lunar bases</div>
+                    <div class="item-date">Jan 2025</div>
+                </div>
+                <ul>
+                    <li>Conducted stress analysis of spherical and hemispherical geopolymer structures, accounting for wall thickness and lunar gravity; applied Lagrange multipliers and optimization methods to determine optimal habitat geometry</li>
+                    <li>Used Taylor series expansion to analyze sensitivity of structural stress to angular deviations during 3D printing and construction; quantified allowable angular tolerances to keep stresses within safe limits for lunar base supports</li>
+                </ul>
+                <button onclick="togglePDF('pdf5', 'https://raw.githubusercontent.com/janierlani/portfolio/main/MATH%20IA.pdf')" class="item-link">View Paper</button>
+                <div id="pdf5" class="pdf-container">
+                    <div class="pdf-header">
+                        <span>Stress analysis of dome-shaped lunar bases</span>
+                        <button onclick="togglePDF('pdf5')" class="pdf-close-btn">Close</button>
                     </div>
                     <iframe class="pdf-viewer-inline" src=""></iframe>
                 </div>
@@ -638,7 +657,7 @@
                     <li>Fine-tuned Alpaca-7B LLM for AI-driven behavioral modeling in long-duration space missions</li>
                     <li>Developed LorelAI, an AI social assistant addressing psychological challenges of isolation and crew dynamics</li>
                 </ul>
-                <button onclick="togglePDF('pdf2', 'https://docs.google.com/viewer?url=https://raw.githubusercontent.com/janierlani/portfolio/main/Design%20Recommendations%20for%20Interactive%20Mental%20Health%20Chatbots%20used%20in%20Space%20Missions.pdf&embedded=true')" class="item-link">View Paper</button>
+                <button onclick="togglePDF('pdf2', 'https://raw.githubusercontent.com/janierlani/portfolio/main/Design%20Recommendations%20for%20Interactive%20Mental%20Health%20Chatbots%20used%20in%20Space%20Missions.pdf')" class="item-link">View Paper</button>
                 <div id="pdf2" class="pdf-container">
                     <div class="pdf-header">
                         <span>Design Recommendations for Interactive Chatbots</span>
@@ -657,7 +676,7 @@
                     <li>Studied how spaceflight-driven neurophysiological changes affect decision-making under risk and uncertainty using Prospect Theory</li>
                     <li>Analyzed specific brain regions and neuromodulatory system alterations; mentored by Dartmouth professor</li>
                 </ul>
-                <button onclick="togglePDF('pdf3', 'https://docs.google.com/viewer?url=https://raw.githubusercontent.com/janierlani/portfolio/main/Neuroeconomics%20in%20the%20Orbit.pdf&embedded=true')" class="item-link">View Paper</button>
+                <button onclick="togglePDF('pdf3', 'https://raw.githubusercontent.com/janierlani/portfolio/main/Neuroeconomics%20in%20the%20Orbit.pdf')" class="item-link">View Paper</button>
                 <div id="pdf3" class="pdf-container">
                     <div class="pdf-header">
                         <span>Neuroeconomics in Orbit</span>
@@ -676,7 +695,7 @@
                     <li>Authored 7,500-word paper on peripheral and central pain pathways in degenerative disease</li>
                     <li>Published in National High School Journal of Science; mentored by Georgetown M.D./Ph.D.</li>
                 </ul>
-                <button onclick="togglePDF('pdf4', 'https://docs.google.com/viewer?url=https://raw.githubusercontent.com/janierlani/portfolio/main/Neuropathic%20Pain%20Mechanisms%20and%20Treatment%20Approaches.pdf&embedded=true')" class="item-link">View Paper</button>
+                <button onclick="togglePDF('pdf4', 'https://raw.githubusercontent.com/janierlani/portfolio/main/Neuropathic%20Pain%20Mechanisms%20and%20Treatment%20Approaches.pdf')" class="item-link">View Paper</button>
                 <div id="pdf4" class="pdf-container">
                     <div class="pdf-header">
                         <span>Neuropathic Pain Mechanisms</span>
@@ -695,7 +714,7 @@
                     <li>Conducted stress analysis of spherical and hemispherical geopolymer structures, accounting for wall thickness and lunar gravity; applied Lagrange multipliers and optimization methods to determine optimal habitat geometry</li>
                     <li>Used Taylor series expansion to analyze sensitivity of structural stress to angular deviations during 3D printing and construction; quantified allowable angular tolerances to keep stresses within safe limits for lunar base supports</li>
                 </ul>
-                <button onclick="togglePDF('pdf5', 'https://docs.google.com/viewer?url=https://raw.githubusercontent.com/janierlani/portfolio/main/MATH%20IA.pdf&embedded=true')" class="item-link">View Paper</button>
+                <button onclick="togglePDF('pdf5', 'https://raw.githubusercontent.com/janierlani/portfolio/main/MATH%20IA.pdf')" class="item-link">View Paper</button>
                 <div id="pdf5" class="pdf-container">
                     <div class="pdf-header">
                         <span>Stress analysis of dome-shaped lunar bases</span>
@@ -815,3 +834,14 @@
                 <div class="skill-category">
                     <h3>Programming</h3>
                     <p>Python, MATLAB, SystemVerilog, ImageJ</p>
+                </div>
+                
+                <div class="skill-category">
+                    <h3>Software & CAD</h3>
+                    <p>SolidWorks, COMSOL Multiphysics, Altium Designer, Arduino IDE, Android Studio, VS Code, Excel</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <h2>Honors & Awards</h2>
